updating melt example

--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -96,7 +96,24 @@
     "* Ordered collection of columns\n",
     "* Each column can be a different value type (numeric, string, boolean, etc.)\n",
     "\n",
-    "<img src=\"support_files/images/pandas/dataframe_example.png\">     \n"
+    "<img src=\"support_files/images/pandas/dataframe_example.png\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "\n",
+    "<center><h1>Relational Data</h1></center>\n",
+    "\n",
+    "Relational data is data that captures associations or relationships between data points. This is often expressed as a table with columns indicating the quantities related. For example, \"First names\" are associated with \"Last Names\".\n",
+    "    \n",
+    "\n",
+    "This is a table with two columns, one column for First Name and one column for Last Name. For the pedantic, a \"relation\" is a table with no duplicate entries. \n",
+    "    \n",
+    "    \n",
+    "**Indexes**: We might, for example, have two John Smiths. We can try to eliminate this collision problem by introducing an **Index**."
    ]
   },
   {
@@ -8184,7 +8201,9 @@
     "* <code>var_name</code>:  Name to use for the ‘variable’ column. If None it uses frame.columns.name or ‘variable’.\n",
     "    * what are the columns you want to transform (are they cities? dates? something else?\n",
     "* <code>value_name</code>: Name to use for the ‘value’ column. \n",
-    "    * what are the values of the columns you are going to transform (cost? population? temperature? etc?)"
+    "    * what are the values of the columns you are going to transform (cost? population? temperature? etc?)\n",
+    "    \n",
+    "<img src=\"support_files/images/pandas/pandas_melt.png\">      "
    ]
   },
   {
