updated melt images & example

--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -8203,7 +8203,7 @@
     "* <code>value_name</code>: Name to use for the ‘value’ column. \n",
     "    * what are the values of the columns you are going to transform (cost? population? temperature? etc?)\n",
     "    \n",
-    "<img src=\"support_files/images/pandas/pandas_melt.png\">      "
+    "<img src=\"support_files/images/pandas/pandas_melt_examplec.PNG\">"
    ]
   },
   {
@@ -8214,8 +8214,10 @@
    "source": [
     "# You may have noticed that there are many missing values in the columns \n",
     "# that contain each month, ie \"1/1/2014\". \n",
-    "# We will pivot these values from columns to rows, creating two new columns\n",
-    "# one for the 12 column headers and one for the values.\n",
+    "# We will gather these values from columns to rows, creating two new columns\n",
+    "\n",
+    "# the variables are the dates and the values represent sales\n",
+    "\n",
     "\n",
     "# the column labels (var_name) all represent order date\n",
     "# the values(value_name) represent sales\n",
