consolidated view vs copy

--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -1862,9 +1862,7 @@
     "* standard deviation\n",
     "* minimum\n",
     "* 25, 50 & 75th percentiles\n",
-    "* max \n",
-    "\n",
-    "\n"
+    "* max "
    ]
   },
   {
@@ -2141,6 +2139,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
+    "\n",
+    "<h4>other built in summary functions</h4> \n",
+    "\n",
+    "Pandas also provides a large set of summary functions that can operate on different kinds of pandas objects (dataframe columns, Series, Groupby etc.)\n",
+    "\n",
+    "* **<code>[.count()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.count.html?highlight=count#pandas.DataFrame.count)</code>**    \n",
+    "* **<code>[.sum()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sum.html?highlight=sum#pandas.DataFrame.sum)</code>**\n",
+    "* **<code>[.min()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.min.html?highlight=min#pandas.DataFrame.min)</code>**\n",
+    "* **<code>[.max()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.max.html?highlight=max#pandas.DataFrame.max)</code>**\n",
+    "* **<code>[.mean()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.mean.html?highlight=mean#pandas.DataFrame.mean)</code>**\n",
+    "* **<code>[.median()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.median.html?highlight=median#pandas.DataFrame.median)</code>**\n",
+    "* **<code>[.var()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.var.html?highlight=var#pandas.DataFrame.var)</code>**\n",
+    "* **<code>[.std()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.std.html?highlight=std#pandas.DataFrame.std)</code>**\n",
+    "    \n",
+    "These functions become especially useful in the next section where there might be some specific selection of  data you want to analyze "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14329119844846172"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets do a very quick demonstration of how this works\n",
+    "# here we get the mean discount for the entire discount column\n",
+    "df[\"Discount\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"background: #DFF0D8; border-radius: 3px; padding: 10px;\">\n",
     "\n",
     "**STUDENT EXERCISES:** \n",
@@ -2267,23 +2309,12 @@
     "* <a href='#loc'>select data by labels/names</a>\n",
     "* <a href='#row_number_vs_index'>a note on row number vs index</a>\n",
     "* <a href='#iloc'>select data by integer Index/position</a>\n",
-    "\n",
-    "\n",
-    "**background on views and copies**\n",
-    "* <a href='#views_descrip'>description of what views vs copies are</a>\n",
-    "* <a href='#copy'>create a copy</a>\n",
-    "* <a href='#inplace'>modifying data inplace</a>   \n",
-    " \n",
-    "    \n",
+    "   \n",
     "**advanced data selection**\n",
     "* <a href='#conditionalselection'>select data for a given condition or threshold</a>\n",
     "* <a href='#conditionalselectionandreturn'>return subset of data for a given condition or threshold</a>\n",
     "* <a href='#multicondition'>select data based on multiple conditions or thresholds</a>\n",
-    "* <a href='#multioptionlist'> multiple condition options using a list</a>\n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
+    "* <a href='#multioptionlist'> multiple condition options using a list</a>   "
    ]
   },
   {
@@ -2362,17 +2393,27 @@
     "But in pandas, whether you get a view or not—and whether changes made to a view will propagate back to the original DataFrame—depends on the structure and data types in the original DataFrame\n",
     "    \n",
     "<img src=\"support_files/images/pandas/pandas_view_vs_copy.png\">  \n",
-    "    \n",
     "\n",
-    "**Create a copy using <code>[.copy()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.copy.html)</code>** This is especially useful when doing exploratory analysis on a dataframe where keep the integrity of the original dataframe in case you make a mistake.\n",
+    "    \n",
+    " **When to modify data <code>[inplace](https://towardsdatascience.com/why-you-should-probably-never-use-pandas-inplace-true-9f9f211849e4#:~:text=Using%20the%20inplace%3DTrue%20keyword,which%20you%20apply%20it%20to.)</code> vs Create a copy using <code>[.copy()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.copy.html)</code>**\n",
+    "    \n",
+    "**<code>[inplace](https://towardsdatascience.com/why-you-should-probably-never-use-pandas-inplace-true-9f9f211849e4#:~:text=Using%20the%20inplace%3DTrue%20keyword,which%20you%20apply%20it%20to.)</code>** is a parameter accepted by a number of pandas methods which affects the behaviour of how the method runs.\n",
+    "Some examples of where you might commonly see this keyword are the methods(non-exhaustive):  \n",
+    "* <code>[.fillna()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.fillna.html)</code>\n",
+    "* <code>[.replace()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.replace.html)</code>\n",
+    "* <code>[.rename()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html)</code>\n",
+    "\n",
+    "Using the <code>inplace=True</code> keyword in a pandas method changes the default behaviour such that the operation on the dataframe doesn’t return anything, it instead ‘modifies the underlying data’. It mutates the actual object which you apply it to.\n",
+    "    \n",
+    "**Creating copies** of dataframes can be especially useful when doing exploratory analysis on a dataframe where you want to keep the integrity of the original dataframe in case you make a mistake.\n",
     "    \n",
     "<code>new_df = df.copy()</code> makes a copy (by creating a new object) of this object’s indices and data. By default modifications to the data or indices of the copy will not be reflected in the original object but see the documentation and the parameter <code>deep</code> for more information\n",
-    "\n",
+    "    \n",
+    "Note: Like all other variables, try to keep your dataframe naming descriptive and intuitive to read!(For example \"new_df\" would be a bad name)\n",
     "<img src=\"support_files/images/pandas/pandas_modify_view.png\">\n",
     "    \n",
-    "<img src=\"support_files/images/pandas/pandas_modify_copy.png\">  \n",
-    "    \n",
-    "Note: Like all other variables, try to keep your dataframe naming descriptive and intuitive to read!(For example \"new_df\" would be a bad name)"
+    "<img src=\"support_files/images/pandas/pandas_modify_copy.png\">\n",
+    "\n"
    ]
   },
   {
@@ -2473,7 +2514,6 @@
    ],
    "source": [
     "# get index:ZI-2014-48372 and column'Country'\n",
-    "\n",
     "df.loc[\"ZI-2014-48372\",'Country']"
    ]
   },
@@ -3050,57 +3090,6 @@
    "source": [
     "# get all rows and last 4 columns \n",
     "df.iloc[:,-4:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='inplace'></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
-    "\n",
-    "<h4>modifying data \"inplace\" </h4>\n",
-    "    \n",
-    "**<code>[inplace](https://towardsdatascience.com/why-you-should-probably-never-use-pandas-inplace-true-9f9f211849e4#:~:text=Using%20the%20inplace%3DTrue%20keyword,which%20you%20apply%20it%20to.)</code>** is a parameter accepted by a number of pandas methods which affects the behaviour of how the method runs.\n",
-    "Some examples of where you might commonly see this keyword are the methods(non-exhaustive):  \n",
-    "* <code>[.fillna()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.fillna.html)</code>\n",
-    "* <code>[.replace()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.replace.html)</code>\n",
-    "* <code>[.rename()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html)</code>\n",
-    "\n",
-    "Using the <code>inplace=True</code> keyword in a pandas method changes the default behaviour such that the operation on the dataframe doesn’t return anything, it instead ‘modifies the underlying data’. It mutates the actual object which you apply it to."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
-    "\n",
-    "<h4>An Illustration of Inplace</h4>\n",
-    "\n",
-    "We have an \"ice_cream\" data object: \n",
-    "<img src=\"support_files/images/pandas/pandas_ice_cream_df.png\"> \n",
-    "    \n",
-    "Lets say we want to be able to \"melt\" the ice-cream.\n",
-    "    \n",
-    "If we \"melt\" the ice cream inplace we change the underlying structure of our \"ice-cream\" object\n",
-    "    \n",
-    "    melted_ice_cream = ice_cream.replace({\"frozen\": \"melted\"}, inplace=True)\n",
-    "    \n",
-    "<img src=\"support_files/images/pandas/pandas_inplace_true.png\"> \n",
-    "\n",
-    " \n",
-    "However, when <code>inplace = False</code> a copy of the data is first made, so the original ice-cream/data remains in tact. \n",
-    "    \n",
-    "    melted_ice_cream = ice_cream.replace({\"frozen\": \"melted\"}, inplace=False)\n",
-    "    \n",
-    "<img src=\"support_files/images/pandas/pandas_inplace_false.png\">"
    ]
   },
   {
