added more groupby images

--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -8306,18 +8306,27 @@
    "source": [
     "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
     "\n",
-    "<h4>aggregate data using .groupby() and .agg()</h4>\n",
+    "<h4>aggregate data using .groupby()</h4>\n",
+    "\n",
+    "<img src=\"support_files/images/pandas/pandas_groupby.png\"> \n",
     "\n",
     "**<code>[.groupby()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.groupby.html</code>)** allows you to group a dataframe using a mapper or by a Series of columns. A groupby operation involves some combination of splitting the object, applying a function, and combining the results. This can be used to group large amounts of data and compute operations on these groups.\n",
     "\n",
-    "<img src=\"support_files/images/pandas/pandas_groupby.png\">  \n",
+    "\n",
+    "<code> grouped_object = df.groupby(by =[columns])</code>\n",
+    "<img src=\"support_files/images/pandas/pandas_groupby_b.png\">  \n",
     "    \n",
-    "**<code>[.agg()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.agg.html)</code>** will then compute aggregation on the grouped object. \n",
+    "You can then run analytics or further aggregations on each of the groups in your groupby object. You can use many of the descriptive statistics functions we talked about early in the notebook or **<code>[.agg()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.agg.html)</code>** will also compute aggregation on the grouped object.  Example aggregators: min, max, sum, mean, median etc. \n",
     "\n",
-    "Example aggregators: min, max, sum, mean, median etc. \n",
+    "* <code>grouped_object.max()</code>\n",
+    "* <code>df.groupby(by = [columns]).agg([aggregator])</code>\n",
     "\n",
-    "code example:\n",
-    "<code>df.groupby(by = [columns]).agg([aggregator])</code>\n"
+    "    \n",
+    "<img src=\"support_files/images/pandas/pandas_groupby_c.png\">\n",
+    "    \n",
+    "\n",
+    "**Groupby \"pipeline\":**\n",
+    "<img src=\"support_files/images/pandas/pandas_groupby_split_apply_combine.png\">      \n"
    ]
   },
   {
