updated intro with relational data description from Michael

--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -30,12 +30,15 @@
     "\n",
     "**DataFrame Object**\n",
     "    \n",
-    "A Pandas DataFrame is a two-dimensional size-mutable, potentially heterogeneous tabular data structure. Data is aligned in a tabular fashion with labeled rows and columns like a spreadsheet or SQL table, or a dict of Series objects. Essentially, a Pandas DataFrame consists of three components, the data, rows, and columns.\n",
+    "A Pandas DataFrame is a two-dimensional size-mutable, potentially heterogeneous tabular data structure that holds ***relational data***.\n",
+    "\n",
+    "Data is aligned in a tabular fashion with labeled rows and columns like a spreadsheet or SQL table, or a dict of Series objects. Essentially, a Pandas DataFrame consists of three components, the data, rows, and columns.\n",
     "***\n",
     "Key takeaways: \n",
     "* Represents a tabular, spreadsheet-like data structure\n",
     "* Ordered collection of columns\n",
     "* Each column can be a different value type (numeric, string, boolean, etc.)\n",
+    "* holds relational data\n",
     "\n",
     "<img src=\"support_files/images/pandas/dataframe_example.png\">\n"
    ]
@@ -52,16 +55,50 @@
     "    \n",
     "\n",
     "This is a table with two columns, one column for First Name and one column for Last Name. For the pedantic, a \"relation\" is a table with no duplicate entries. \n",
+    "\n",
+    "<img src=\"support_files/images/pandas/pandas_relational_df.png\" width='250'>  \n",
     "    \n",
+    "This is a table with two columns, one column for First Name and one column for Last Name.\n",
+    "\n",
+    "\n",
+    "For the pedantic, a \"relation\" is a table with no duplicate entries.  We might, for example, have two John Smiths.  We can try to eliminate this collision problem by introducing an **Index**.\n",
+    "\n",
+    "<img src=\"support_files/images/pandas/pandas_student_df_with_index.png\" width='300'>  \n",
     "    \n",
-    "**Indexes**: We might, for example, have two John Smiths. We can try to eliminate this collision problem by introducing an **Index**.\n",
-    "    \n",
-    "A brief note on row vs index\n",
+    "**A brief note on row vs index**\n",
     "In this notebook and lecture we will use the terms row number and index. For many contexts these terms are interchangable, however due to pandas nomenclature around different ways of slicing and dicing data, we will have distinct meanings for these\n",
     "\n",
-    "row number:the number of the row starting with row 0\n",
+    "row number: the number of the row starting with row 0\n",
+    "index: label given to a specific row\n",
+    " \n",
+    "    \n",
+    "<img src=\"support_files/images/pandas/pandas_relation_df_generic.png\" width='250'>       \n",
+    "   \n",
+    "In the above table we have added an \"Index\".  The `DataFrame` object in Python is a representation of a table with these components.  It is composed of rows, each with an index, and labeled columns. \n",
+    "    \n",
+    "<br>\n",
+    "In a general `DataFrame`, we might have many different relations captured in the same table.  For example, a `DataFrame` with student data from a school might look something like this:\n",
+    "    \n",
+    "<img src=\"support_files/images/pandas/pandas_relational_student_df.png\" width='500'>  \n",
     "\n",
-    "index: label given to a specific row"
+    "<br>\n",
+    "\n",
+    "**Data Representation**\n",
+    "\n",
+    "When thinking about data analysis, note that the above table already gives us something to think about regarding how choices of data representation affect conclusions.  What if someone only has one name?  What if they have a name that isn't easily represented as \"First name/Last name\"?  What if they come from a culture that keeps track of multiple names?  \n",
+    "\n",
+    "Note there is a Gender column.  What if the person who constructed this data had created this column as `isFemale`?  \n",
+    "\n",
+    "When interacting with tables and `DataFrames`, it is important to keep these issues in mind.  Structural choices about data can and will affect conclusions.  Whenever you make a `DataFrame` or use one someone else has constructed for you, you are making or dealing with these kinds of choices.\n",
+    "    \n",
+    "There are standard operations related to questions you might have about the students in the above `DataFrame`. \n",
+    "<ul>\n",
+    "    <li> Which students took Physics?  </li>\n",
+    "    <li> Which students got an A in any course?  Which Students from the University of Washington got an A or B in either Physics or History? </li>\n",
+    "    </ul>\n",
+    "\n",
+    "The `DataFrame` object has operations that allow these kinds of questions to be answered in a computationally efficient manner. These are covered in this tutorial.\n",
+    "    \n"
    ]
   },
   {
@@ -69,21 +106,23 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "    \n",
+    "<center><h2>Many different relations</h2></center>\n",
     "\n",
-    "<h2>Tidy Data</h2>\n",
+    "If we only needed to subselect from one table, we wouldn't really need something like `pandas` and its `DataFrame` (though it is helpful for this!).  The real power of the `DataFrame` object appears when we have multiple relations, i.e. multiple `DataFrame`s and we wish to combine them in some way.\n",
     "\n",
-    "It is often said that 80% of data analysis is spent on the cleaning and preparing data. Tidying data is the procss of structuring datasets to facilitate analysis.\n",
+    "For example we might have `DataFrame`s that represent student Grades, or Professors, or Schools.\n",
     "\n",
-    "<h4>The Tidy Standard</h4>\n",
-    "The tidy data standard has been designed to facilitate initial exploration and analysis of the data, and to simplify the development of data analysis tools that work well together. Current tools often require translation. You have to spend time munging the output from one tool so you can input it into another. Tidy datasets and tidy tools work hand in hand to make data analysis easier, allowing you to focus on the interesting domain problem, not on the uninteresting logistics of data.\n",
+    "<img src=\"support_files/images/pandas/pandas_grade_df.png\" width='200'>\n",
+    "    \n",
+    "or a `DataFrame` with Courses offered by Departments in different schools:\n",
     "\n",
-    "Tidy data is a standard way of mapping the meaning of a dataset to its structure. A dataset is messy or tidy depending on how rows, columns and tables are matched up with observations, variables and types. In tidy data:\n",
-    "\n",
-    "* Every column is a variable.\n",
-    "* Every row is an observation.\n",
-    "* Every cell is a single value.\n",
-    "\n",
-    "[Resource on tidy data and data cleaning](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html#:~:text=Tidy%20data%20is%20a%20standard,Every%20row%20is%20an%20observation.)"
+    "<img src=\"support_files/images/pandas/pandas_departments_df.png\" width='500'>\n",
+    "    \n",
+    "or a `DataFrame` of Professors and the Courses they teach\n",
+    "    \n",
+    "<img src=\"support_files/images/pandas/pandas_professors.png\" width='500'>\n",
+    "</div>"
    ]
   },
   {
