moved reset_index, updated view vs copy image

--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -196,18 +196,14 @@
     "<li>descriptive statistics\n",
     "\n",
     "<h4><a href='#dataselection'>Data Selection, slicing & dicing</a></h4>\n",
-    "\n",
     "<li>select data by labels/names\n",
     "<li>select data by position\n",
-    "<li>“views” of the data, new objects etc. \n",
-    "    <li>In-place vs reassigned\n",
+    "<li>“views” vs copies of the data\n",
     "<li>conditional selection\n",
     "<li>multiple condition selection\n",
     "\n",
     "\n",
     "<h4><a href='#manipulate'>Table & Data Manipulation</a></h4>\n",
-    "<li>split columns\n",
-    "<li>rename columns\n",
     "<li>add/create new columns\n",
     "<li>drop columns\n",
     "<li>sort values\n",
@@ -225,18 +221,14 @@
     "<li>saving dataframes \n",
     "    \n",
     "    \n",
-    "<h4><a href='#table'>Bonus Material</a></h4>\n",
-    "<li>join & merge tables\n",
-    "<li>create dataframe from scratch\n",
-    "<li>saving dataframes"
+    "<h4><a href='#bonus'>Bonus Material</a></h4>\n",
+    "<li>split columns\n",
+    "<li>rename columns\n",
+    "<li> get column or dataframe values\n",
+    "<li>select multiple items from a single column using a list\n",
+    "<li>split strings in a column\n",
+    "<li>adjust column data type to match assumptions\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2519,21 +2511,19 @@
     "    \n",
     "But in pandas, whether you get a view or not—and whether changes made to a view will propagate back to the original DataFrame—depends on the structure and data types in the original DataFrame\n",
     "    \n",
-    "<img src=\"support_files/images/pandas/pandas_view_vs_copy.png\">  \n",
+    "<img src=\"support_files/images/pandas/pandas_view_vs_copy_b.png\">  \n",
     "\n",
     "    \n",
-    " **When to modify data <code>[inplace](https://towardsdatascience.com/why-you-should-probably-never-use-pandas-inplace-true-9f9f211849e4#:~:text=Using%20the%20inplace%3DTrue%20keyword,which%20you%20apply%20it%20to.)</code> vs Create a copy using <code>[.copy()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.copy.html)</code>**\n",
-    "    \n",
-    "\n",
-    "    \n",
+    "**When to create a copy using <code>[.copy()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.copy.html)</code>**\n",
+    "      \n",
     "**Creating copies** of dataframes can be especially useful when doing exploratory analysis on a dataframe where you want to keep the integrity of the original dataframe in case you make a mistake.\n",
     "    \n",
     "<code>new_df = df.copy()</code> makes a copy (by creating a new object) of this object’s indices and data. By default modifications to the data or indices of the copy will not be reflected in the original object but see the documentation and the parameter <code>deep</code> for more information\n",
     "    \n",
     "Note: Like all other variables, try to keep your dataframe naming descriptive and intuitive to read!(For example \"new_df\" would be a bad name)\n",
-    "<img src=\"support_files/images/pandas/pandas_modify_view.png\">\n",
+    "<img src=\"support_files/images/pandas/pandas_modify_view.png\" width='60%'>\n",
     "    \n",
-    "<img src=\"support_files/images/pandas/pandas_modify_copy.png\">\n",
+    "<img src=\"support_files/images/pandas/pandas_modify_copy.png\" width='60%'>\n",
     "\n"
    ]
   },
@@ -5979,7 +5969,6 @@
     "* <a href='#dropcolumns'>drop unneccesary or redundant columns</a>\n",
     "* <a href='#dropna'>drop nan, NULL entries</a>\n",
     "* <a href='#sort_values'>sort the whole dataframe based on one column's values </a>\n",
-    "* <a href='#reset_index'>reset the index of a dataframe </a>    \n",
     "    \n",
     "\n",
     "**Bonus Material**\n",
@@ -6100,7 +6089,7 @@
     "USA_df = USA_df.drop(columns=['Category (OLD)'])\n",
     "\n",
     "# check the results in the dataframe columns list\n",
-    "USA_df.columns\n"
+    "USA_df.columns"
    ]
   },
   {
@@ -6121,18 +6110,6 @@
     "\n",
     "Using the <code>inplace=True</code> keyword in a pandas method changes the default behaviour such that the operation on the dataframe doesn’t return anything, it instead ‘modifies the underlying data’. It mutates the actual object which you apply it to."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -6618,44 +6595,6 @@
     "\n",
     "USA_df.sort_values(by = ['Segment', 'Category', 'Sub-Category'], inplace = False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='reset_index'></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
-    "\n",
-    "<h4>Resetting the index</h4>\n",
-    "    \n",
-    "In many of the upcoming table transformations, the process of transforming the data removes the index. If we wish to retain the index row we will want to reset the index before we do these transformations so it is saved in a regular column format. \n",
-    "    \n",
-    "This is easily achievable with **<code>[.reset_index()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.reset_index.html)<code>**. \n",
-    "\n",
-    " * Use <code>drop=True</code> if it's not necessary to maintain a column with the original indexes. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "USA_df = USA_df.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -7351,6 +7290,21 @@
     "# Lets create a new column cost of goods \"COGS\" \n",
     "# we can calculate the cost of goods by by subtracting the profits from the sales\n",
     "usa_sales_long['COGS'] = USA_long['Sales'] - USA_long['Profit']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
+    "\n",
+    "<h4>Resetting the index</h4>\n",
+    "    \n",
+    "In many of the table transformations, the process of transforming the data removes the index. If we wish to retain the index row we will want to reset the index before we do these transformations so it is saved in a regular column format. \n",
+    "    \n",
+    "This is easily achievable with **<code>[.reset_index()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.reset_index.html)<code>**. \n",
+    "\n",
+    " * Use <code>drop=True</code> if it's not necessary to maintain a column with the original indexes. "
    ]
   },
   {
@@ -8615,6 +8569,13 @@
     "# Answer 3:\n",
     "merged_df.sort_values(by=['Population'], ascending = False).head(10)\n",
     "merged_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='bonus'></a>"
    ]
   },
   {
